fix: body-overflow-error

--- a/src/global.scss
+++ b/src/global.scss
@@ -9,5 +9,5 @@
 }
 
 body {
-  overflow-x: hidden;
+  overflow: hidden;
 }
